<resources>
    <string name="app_name">Group Project</string>
    <string name="userName">Name:</string>
    <string name="phoneNo">Phone No:</string>
    <string name="age">Age:</string>
    <string name="address">Address:</string>
    <string name="profile">Profile</string>
    <string name="button">Button</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="pass">Password</string>
    <string name="accountHelp">Need to make an account?</string>
    <string name="carerCreate">Create Carer</string>
    <string name="patientCreate">Create Patient</string>
    <string name="login">Login</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">Consume</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Consume_Secret</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="patientInfo">Name: %1$s \nPhone Number: %2$s \nAddress: %3$s
        \nDate of Birth: %4$s \nEircode: %5$s \n Left Geo-fence: %6$s</string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string-array name="months_array">
        <item>Choose Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
