<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softwaredev.groupproject.LoginActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textColor="#3399ff"
        android:background="@drawable/button_shape"
        android:layout_marginTop="104dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/nameEntry"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/nameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/passwordEntry"
        android:layout_alignStart="@+id/passwordEntry" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:text="@string/pass"
        android:layout_alignBaseline="@+id/passwordEntry"
        android:layout_alignBottom="@+id/passwordEntry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp" />

    <Button
        android:id="@+id/carerButton"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:textColor="#3399ff"
        android:text="@string/carerCreate"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/patientButton"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/carerButton"
        android:layout_alignStart="@+id/carerButton"
        android:layout_below="@+id/carerButton"
        android:layout_marginTop="36dp"
        android:textColor="#3399ff"
        android:background="@drawable/button_shape"
        android:text="@string/patientCreate" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/accountHelp" />

</RelativeLayout>