<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.softwaredev.groupproject.ProfileActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/userName"/>

    <TextView
        android:id="@+id/dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/dateOfBirth"
        android:layout_below="@id/name"/>

    <TextView
        android:id="@+id/PhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/phoneNo"
        android:layout_below="@id/dateOfBirth"/>

    <TextView
        android:id="@+id/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:text="@string/address"
        android:layout_below="@id/PhoneNo"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_row="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_column="1"
            android:orientation="horizontal"
            android:id="@+id/icons"
            android:background="#fff">

            <ImageView
                android:id="@+id/home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/home"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/profile"
                android:src="@drawable/user"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/homeAuto"
                android:src="@drawable/security"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:id="@+id/calendar"
                android:src="@drawable/calendar"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textView"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="#fff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Home"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Profile"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Settings"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Calendar"
                android:gravity="center"
                android:layout_weight="1"/>

        </LinearLayout>
    </GridLayout>


</RelativeLayout>
